Fix the spacing the right section divider

--- a/feedback-2.0/css/styles.css
+++ b/feedback-2.0/css/styles.css
@@ -180,6 +180,7 @@ p {
   color: #000;
   font-size: 1.8rem;
   font-weight: 500;
+  margin-bottom: 1rem;
 }
 .r-divider{
   border-color: #96C9F4;
